actualizando el html

--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
-cambio desde la web
-no eh podido
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Curso Git</title>
+</head>
+<body>
+    <h1>prueba de git </h1>
+    <p>he borrado todo del html y lo eh empezado
+       de cero desde mi repositorio clonado.</p>
+</body>
+</html>
