crreado el archivo css y agragado al html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stilos.css">
     <title>Curso Git</title>
 </head>
 <body>
     <h1>prueba de git </h1>
-    <p>he borrado todo del html y lo eh empezado
+    <p id="para01">he borrado todo del html y lo eh empezado
        de cero desde mi repositorio clonado.</p>
 </body>
 </html>
